draft new mapping 2